--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,8 +1,9 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-form_tag movies_path, :method => :get, :id => 'ratings_form' do
+= form_tag movies_path, :method => :get, :id => 'ratings_form' do
   Include:
+  =puts @all_ratings
   - @all_ratings.each do |rating,isChecked|
     = rating
     = check_box_tag "ratings[#{rating}]",1,isChecked
