--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,22 +1,21 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-= form_tag movies_path, :method => :get, :id => 'ratings_form' do
+= form_tag movies_path, :method => :get, :id=>"ratings_form" do
   Include:
-  =puts @all_ratings
-  - @all_ratings.each do |rating,isChecked|
+  - @ratings_all.each do |rating, value|
     = rating
-    = check_box_tag "ratings[#{rating}]",1,isChecked
-  = submit_tag 'Refresh', :id => 'ratings_submit'
+    = check_box_tag "ratings[#{rating}]", 1, value, :id => "ratings_#{rating}"
+  = submit_tag 'Refresh',:id=>"ratings_submit"
 
 %table#movies
   %thead
     %tr
       %th{:class => ("hilite" if @order_by == "title" )} 
-        = link_to "Movie Title", movies_path(:order=>"title",:ratings => @ratings), :id=>"title_header"
+        = link_to "Movie Title", movies_path(:order=>"title", :ratings=>@ratings), :id=>"title_header"
       %th Rating
       %th{:class => ("hilite" if @order_by == "release_date" )} 
-        = link_to 'Release Date', movies_path(:order=>"release_date",:ratings => @ratings), :id=>"release_date_header"
+        = link_to 'Release Date', movies_path(:order=>"release_date", :ratings=>@ratings), :id=>"release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
