--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
   Include:
   - @ratings_all.each do |rating, value|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, value
+    = check_box_tag "ratings[#{rating}]", 1, value, :id => "ratings_#{rating}"
   = submit_tag 'Refresh',:id=>"ratings_submit"
 
 %table#movies
